CSRF保護を無効化、画像ファイルアップロードの例外処理を改善

--- a/RecipeNotebook/build.gradle
+++ b/RecipeNotebook/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'me.paulschwarz:spring-dotenv:3.0.0'
     // Base64デコード
     implementation 'commons-codec:commons-codec:1.15'
+    // SpringSecurity
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     // SpringBoot Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
